5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1798_2562.log
== SUBMITION (2019-06-11 19:49:50) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.814032
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:49:55) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.74525
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:52:11) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.913182
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:52:31) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.658231
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 19:54:18) 
-- CODE:
from numpy import*
vet = array(eval(input("Primeiro vetor: ")))
while(len(vet)>1):
	npar = 0;
	nimpar = 0;
	for i in vet:
		if i%2==0:
			npar+=1
		else:
			nimpar+=1
	print(npar)
	print(nimpar)
	print(len(vet))
	vet = array(eval(input(" "))
-- EXECUTION TIME:
0.901057
-- ERROR:
  File "/home/codebench/codes/1798/2562/main.py", line 15
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
